--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^1.13.0",
+    "better-sqlite3": "^12.6.2",
     "nuxt": "^4.3.0",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@nuxt/devtools": "^3.1.1",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.2.4"
   }
