--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "migrate": "node server/db/migrate.ts"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/vue-fontawesome": "^3.1.3",
     "@nuxt/eslint": "^1.13.0",
     "better-sqlite3": "^12.6.2",
     "nuxt": "^4.3.0",
