--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "typecheck": "nuxt typecheck",
-    "migrate": "node server/db/migrate.ts"
+    "migrate": "npx tsx server/db/migrate.ts",
+    "seed": "npx tsx server/db/seed.ts"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
