--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@fortawesome/vue-fontawesome": "^3.1.3",
     "@nuxt/eslint": "^1.13.0",
     "better-sqlite3": "^12.6.2",
+    "highlight.js": "^11.11.1",
+    "marked": "^17.0.1",
+    "marked-highlight": "^2.2.3",
     "nuxt": "^4.3.0",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
